tests/errors/substructural/check/linear_ref_param_untouched_leaks.err.expected
error: at 4:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 4 |             return
   |             ^^^^^^
